--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js"
+
+
   },
-  "engines":{
+  
+  "engines": {
     "node": "18.x"
   },
   "keywords": [],
@@ -17,10 +20,10 @@
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
     "mysql": "^2.18.1",
-    "nodemon": "^3.1.1"
+    "nodemon": "^3.1.1",
+    "underscore": "^1.13.6"
   },
   "devDependencies": {
     "@types/node": "^20.12.12"
   }
-  
 }
