--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "mongoose": "^8.4.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.1",
     "underscore": "^1.13.6"
