--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.1",
+    "password-hash": "^1.2.2",
     "underscore": "^1.13.6"
   },
   "devDependencies": {
